kubernetes/poi_svc_ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: poi
  labels:
    app: poi
spec:
  selector:
    app: poi
  ports:
    - port: 80
      name: http
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-poi
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /api/poi/(.*)
        pathType: Prefix
        backend:
          service:
            name: poi
            port:
              number: 80
