kubernetes/trips_svc_ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: trips
  labels:
    app: trips
spec:
  selector:
    app: trips
  ports:
    - port: 80
      name: http
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-trips
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /api/trips/(.*)
        pathType: Prefix
        backend:
          service:
            name: trips
            port:
              number: 80
      - path: /Trips/(.*)
        pathType: Prefix
        backend:
          service:
            name: trips
            port:
              number: 80
      - path: /UserProfile/(.*)
        pathType: Prefix
        backend:
          service:
            name: trips
            port:
              number: 80
