kubernetes/tripviewer_svc_ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  labels:
    app: tripviewer
spec:
  selector:
    app: tripviewer
  ports:
    - port: 80
      name: http
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tripviewer
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tripviewer
            port:
              number: 80
