kubernetes/user_java_svc_ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  labels:
    app: user-java
spec:
  selector:
    app: user-java
  ports:
    - port: 80
      name: http
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-user-java
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /api/user-java/(.*)
        pathType: Prefix
        backend:
          service:
            name: user-java
            port:
              number: 80
