kubernetes/user_svc_ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    app: user
spec:
  selector:
    app: user
  ports:
    - port: 80
      name: http
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-user
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /api/user/(.*)
        pathType: Prefix
        backend:
          service:
            name: user
            port:
              number: 80
